Frankbelford/uatv1ba/force-app/main/default/objects/Search_Preference__c/Search_Preference__c.object-meta.xml
<CustomObject>
    <label>Search Preference</label>
    <nameField>
        <label>Search Preference Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Search Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>