Frankbelford/uatv1ba/force-app/main/default/objects/Search_Preference__c/fields/Active_User__c.field-meta.xml
<CustomField>
    <fullName>Active_User__c</fullName>
    <formula>IF(User__r.IsActive = TRUE,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active User</label>
    <type>Checkbox</type>
</CustomField>