Frankbelford/uatv1ba/force-app/main/default/objects/Search_Preference__c/fields/Candidate_Geolocation__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Geolocation__c</fullName>
    <label>Candidate Geolocation</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>