Frankbelford/uatv1ba/force-app/main/default/objects/Search_Preference__c/fields/Candidate_ID__c.field-meta.xml
<CustomField>
    <fullName>Candidate_ID__c</fullName>
    <formula>CASESAFEID(User__r.ContactId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidate ID</label>
    <type>Text</type>
</CustomField>