Frankbelford/uatv1ba/force-app/main/default/objects/Search_Preference__c/fields/Candidate_Job_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Job_Opt_Out__c</fullName>
    <formula>User__r.Contact.HasOptedOutOfEmail</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidate Job Opt Out</label>
    <type>Checkbox</type>
</CustomField>