Frankbelford/uatv1ba/force-app/main/default/objects/Search_Preference__c/fields/Mileage_Radius__c.field-meta.xml
<CustomField>
    <fullName>Mileage_Radius__c</fullName>
    <formula>User__r.Milage_Radius__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mileage Radius</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>