Frankbelford/uatv1ba/force-app/main/default/objects/Search_Preference__c/fields/Notification_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Notification_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shift Notifications</label>
    <type>Checkbox</type>
</CustomField>