Frankbelford/uatv1ba/force-app/main/default/objects/Search_Preference__c/fields/Search_Filter__c.field-meta.xml
<CustomField>
    <fullName>Search_Filter__c</fullName>
    <formula>Search_Parameter__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Search Filter</label>
    <type>Text</type>
</CustomField>