Frankbelford/uatv1ba/force-app/main/default/objects/Search_Preference__c/fields/Search_Parameter__c.field-meta.xml
<CustomField>
    <fullName>Search_Parameter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Search Parameter</label>
    <referenceTo>Search_Parameter__c</referenceTo>
    <relationshipLabel>Search Preferences</relationshipLabel>
    <relationshipName>Search_Preferences</relationshipName>
    <type>Lookup</type>
</CustomField>