Frankbelford/uatv1ba/force-app/main/default/objects/Search_Preference__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Candidate_Geolocation__Latitude__s</columns>
    <columns>Candidate_Geolocation__Longitude__s</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>